# kanbaroo

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: api-reference.md  deployment-dogfood.md  future-skill-draft.md  kanberoo-spec.md  kanberoo-workflow-skill.md  mcp-setup.md  spec.md
scripts/: build_api_reference.py
src/kanbaroo/: __init__.py
src/kanberoo/: __init__.py
