[project]
name = "kanberoo"
version = "0.1.0"
description = "A kanban-style issue tracker with TUI, REST + WebSocket API, CLI, and MCP server. Meta-package."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Adam Reese" }]
keywords = ["kanban", "issue-tracker", "tui", "mcp"]
dependencies = []

[project.optional-dependencies]
all = [
    "kanberoo-core",
    "kanberoo-api",
    "kanberoo-tui",
    "kanberoo-cli",
    "kanberoo-mcp",
]

[project.urls]
Repository = "https://github.com/areese801/kanberoo"
Issues = "https://github.com/areese801/kanberoo/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kanberoo"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
kanberoo-core = { workspace = true }
kanberoo-api = { workspace = true }
kanberoo-tui = { workspace = true }
kanberoo-cli = { workspace = true }
kanberoo-mcp = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Body",
    "fastapi.Form",
    "fastapi.Cookie",
    "typer.Option",
    "typer.Argument",
]

[tool.ruff.lint.isort]
known-first-party = [
    "kanberoo_core",
    "kanberoo_api",
    "kanberoo_tui",
    "kanberoo_cli",
    "kanberoo_mcp",
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = [
    "(^|/)alembic/",
    "(^|/)build/",
    "(^|/)dist/",
    "packages/kanberoo-cli/tests/",
    "packages/kanberoo-tui/tests/",
    "packages/kanberoo-mcp/tests/",
]

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
asyncio_mode = "auto"
